@@ -459,7 +459,7 @@ static void doRotate(rotate_config_t *config, rotate_status_t *status)
             fprintf(stderr, "Error truncating the file %s\n", status->current.name);
             exit(2);
         }
-        if (apr_file_write(status->current.fd, status->errbuf, &nWrite) != APR_SUCCESS) {
+        if (apr_file_write_full(status->current.fd, status->errbuf, nWrite, NULL) != APR_SUCCESS) {
             fprintf(stderr, "Error writing to the file %s\n", status->current.name);
             exit(2);
         }
@@ -687,18 +687,7 @@ int main (int argc, const char * const argv[])
         }
 
         nWrite = nRead;
-        rv = apr_file_write(status.current.fd, buf, &nWrite);
-        if (rv == APR_SUCCESS && nWrite != nRead) {
-            /* buffer partially written, which for rotatelogs means we encountered
-             * an error such as out of space or quota or some other limit reached;
-             * try to write the rest so we get the real error code
-             */
-            apr_size_t nWritten = nWrite;
-
-            nRead  = nRead - nWritten;
-            nWrite = nRead;
-            rv = apr_file_write(status.current.fd, buf + nWritten, &nWrite);
-        }
+        rv = apr_file_write_full(status.current.fd, buf, nWrite, &nWrite);
         if (nWrite != nRead) {
             char strerrbuf[120];
             apr_off_t cur_offset;
@@ -715,7 +704,7 @@ int main (int argc, const char * const argv[])
                          rv, cur_offset, status.nMessCount, strerrbuf);
             nWrite = strlen(status.errbuf);
             apr_file_trunc(status.current.fd, 0);
-            if (apr_file_write(status.current.fd, status.errbuf, &nWrite) != APR_SUCCESS) {
+            if (apr_file_write_full(status.current.fd, status.errbuf, nWrite, NULL) != APR_SUCCESS) {
                 fprintf(stderr, "Error writing to the file %s\n", status.current.name);
                 exit(2);
             }
